# hlwm-haskell

./: .gitignore  Herbstclient.hs  LICENSE  README.md  README.org  XLibBindings.hsc  hlwm.cabal
examples/: HerbstClient.hs
src/Graphics/X11/Xlib/: Herbst.hsc
src/HLWM/: IPC.hs
src/HLWM/Client/: Concurrent.hs  Connection.hs  IPC.hs  Main.hs
src/HLWM/IPC/: Internal.hs
