name:                hlwm
version:             0.1.0.0
synopsis:            Bindings to the herbstluftwm window manager
license:             BSD2
license-file:        LICENSE
author:              Hans-Peter Deifel
maintainer:          <hpd@hpdeifel.de>
category:            System
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:               git
  location:           https://git.cs.fau.de/?p=lu03pevi/hlwm-haskell

executable hherbstclient
  main-is:             HLWM/Client/Main.hs
  hs-source-dirs:      src
  other-extensions:    RecordWildCards, LambdaCase, MultiWayIf, TupleSections
  build-depends:       base >=4.7 && <4.8, X11 >=1.6 && <1.7, transformers, monads-tf, lens, stm,
                       unix
  build-tools:         hsc2hs
  default-language:    Haskell2010
  other-modules:       Graphics.X11.Xlib.Herbst,
                       HLWM.IPC,
                       HLWM.IPC.Internal
  ghc-options:         -Wall

library
  hs-source-dirs:      src
  other-extensions:    RecordWildCards, LambdaCase, MultiWayIf, TupleSections
  build-depends:       base >=4.7 && <4.8, X11 >=1.6 && <1.7, transformers, monads-tf, stm,
                       unix
  build-tools:         hsc2hs
  default-language:    Haskell2010
  exposed-modules:     HLWM.IPC,
                       HLWM.IPC.Internal
  other-modules:       Graphics.X11.Xlib.Herbst
  ghc-options:         -Wall
